branches/parser-broken/src/org/openiaml/iacleaner/ast/js/Javascript.java
/* Generated By:JJTree&JavaCC: Do not edit this line. Javascript.java */
package org.openiaml.iacleaner.ast.js;

import java.util.*;
import java.io.*;

/** A grammar for web applications, maybe? */
public class Javascript/*@bgen(jjtree)*/implements JavascriptTreeConstants, JavascriptConstants {/*@bgen(jjtree)*/
  protected static JJTJavascriptState jjtree = new JJTJavascriptState();
  public static Javascript instance = null;

  /**
   * For loading test cases programatically.
   */
  public static SimpleNode loadFile(File f, int initialState) throws ParseException, FileNotFoundException {
        FileInputStream fis = new FileInputStream(f);
        if (instance == null) {
                instance = new Javascript(fis);
        } else {
                ReInit(fis);
        }
        JavascriptTokenManager.SwitchTo(initialState);
        SimpleNode n;
        n = StartJs();
        return n;
  }

  /**
   * For loading test cases programatically.
   * Works out the initial state based on the file extension of the given
   * file.
   */
  public static SimpleNode loadFile(File f) throws ParseException, FileNotFoundException {
          String extension = f.getAbsolutePath().substring(f.getAbsolutePath().lastIndexOf("."));

          int initialState = 0;
          if (extension.equals(".js")) {
                initialState = JS_STATE;
          } else {
                throw new RuntimeException("Unknown file type: " + extension + " (from file: " + f + ")");
          }

          return loadFile(f, initialState);
  }

  /**
   * Loading string sources.
   * 
   * @throws UnsupportedEncodingException if we have a problem with the charset encoding 
   */
  public static SimpleNode loadString(String s, String charset, int initialState) throws ParseException, FileNotFoundException, UnsupportedEncodingException {
          InputStream fis = new ByteArrayInputStream(s.getBytes(charset));
        if (instance == null) {
                instance = new Javascript(fis);
        } else {
                ReInit(fis);
        }
        JavascriptTokenManager.SwitchTo(initialState);
        SimpleNode n;
        n = StartJs();
        return n;
  }

  /** Loads string sources with a default state of JS. */
  public static SimpleNode loadString(String s, String charset) throws ParseException, FileNotFoundException, UnsupportedEncodingException {
        return loadString(s, charset, JS_STATE);
  }

/* JS_VARIABLE === JS_FUNCTION_NAME */

/** Main production. */
  static final public SimpleNode StartJs() throws ParseException {
                        /*@bgen(jjtree) StartJs */
                         ASTStartJs jjtn000 = new ASTStartJs(JJTSTARTJS);
                         boolean jjtc000 = true;
                         jjtree.openNodeScope(jjtn000);SimpleNode n;
    try {
      JsBlock();
                    n = jjtn000;
      jj_consume_token(0);
          jjtree.closeNodeScope(jjtn000, true);
          jjtc000 = false;
          {if (true) return n;}
    } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
    throw new Error("Missing return statement in function");
  }

  static final public void JsBlock() throws ParseException {
                  /*@bgen(jjtree) JsBlock */
  ASTJsBlock jjtn000 = new ASTJsBlock(JJTJSBLOCK);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      label_1:
      while (true) {
        JsStatement();
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case JS_FUNCTION_STATEMENT:
        case JS_RETURN_STATEMENT:
        case JS_NEW_STATEMENT:
        case JS_VAR_STATEMENT:
        case JS_IF_STATEMENT:
        case JS_FOR_STATEMENT:
        case JS_TRY_STATEMENT:
        case JS_THROW_STATEMENT:
        case JS_BRACE_OPEN:
        case JS_END:
        case JS_VARIABLE:
        case JS_SCRIPT_END:
        case PHP_BLOCK_BEGIN:
          ;
          break;
        default:
          jj_la1[0] = jj_gen;
          break label_1;
        }
      }
    } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
  }

  static final public void JsStatement() throws ParseException {
                      /*@bgen(jjtree) JsStatement */
  ASTJsStatement jjtn000 = new ASTJsStatement(JJTJSSTATEMENT);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case JS_FUNCTION_STATEMENT:
        JsFunctionDefinition();
        break;
      case JS_IF_STATEMENT:
        JsIfStatement();
        break;
      case JS_FOR_STATEMENT:
        JsForStatement();
        break;
      case JS_RETURN_STATEMENT:
      case JS_NEW_STATEMENT:
      case JS_VAR_STATEMENT:
      case JS_VARIABLE:
        JsLanguageStatement();
        break;
      case JS_BRACE_OPEN:
        jj_consume_token(JS_BRACE_OPEN);
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case JS_FUNCTION_STATEMENT:
        case JS_RETURN_STATEMENT:
        case JS_NEW_STATEMENT:
        case JS_VAR_STATEMENT:
        case JS_IF_STATEMENT:
        case JS_FOR_STATEMENT:
        case JS_TRY_STATEMENT:
        case JS_THROW_STATEMENT:
        case JS_BRACE_OPEN:
        case JS_END:
        case JS_VARIABLE:
        case JS_SCRIPT_END:
        case PHP_BLOCK_BEGIN:
          JsBlock();
          break;
        default:
          jj_la1[1] = jj_gen;
          ;
        }
        jj_consume_token(JS_BRACE_CLOSE);
        break;
      case JS_TRY_STATEMENT:
        JsTryCatchBlock();
        break;
      case JS_THROW_STATEMENT:
        JsThrowStatement();
        break;
      case PHP_BLOCK_BEGIN:
        JsPhpInlineBlock();
        break;
      case JS_SCRIPT_END:
        jj_consume_token(JS_SCRIPT_END);
        break;
      case JS_END:
        jj_consume_token(JS_END);
        break;
      default:
        jj_la1[2] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
  }

  static final public void JsPhpInlineBlock() throws ParseException {
                           /*@bgen(jjtree) JsPhpInlineBlock */
  ASTJsPhpInlineBlock jjtn000 = new ASTJsPhpInlineBlock(JJTJSPHPINLINEBLOCK);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(PHP_BLOCK_BEGIN);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case PHP_SCRIPT:
        PhpBlock();
        break;
      default:
        jj_la1[3] = jj_gen;
        ;
      }
    } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
  }

  static final public void JsLanguageStatement() throws ParseException {
                              /*@bgen(jjtree) JsLanguageStatement */
  ASTJsLanguageStatement jjtn000 = new ASTJsLanguageStatement(JJTJSLANGUAGESTATEMENT);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case JS_RETURN_STATEMENT:
        JsReturnStatement();
        break;
      case JS_VAR_STATEMENT:
        jj_consume_token(JS_VAR_STATEMENT);
        jj_consume_token(JS_VARIABLE);
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case JS_EQUAL:
          jj_consume_token(JS_EQUAL);
          JsValuePossiblyWrapped();
          break;
        default:
          jj_la1[4] = jj_gen;
          ;
        }
        break;
      case JS_VARIABLE:
        jj_consume_token(JS_VARIABLE);
        JsTraverseObjects();
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case JS_ASSIGNMENT_OPERATOR:
        case JS_OPERATOR_SINGLE:
        case JS_EQUAL:
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case JS_ASSIGNMENT_OPERATOR:
          case JS_EQUAL:
            switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
            case JS_EQUAL:
              jj_consume_token(JS_EQUAL);
              break;
            case JS_ASSIGNMENT_OPERATOR:
              jj_consume_token(JS_ASSIGNMENT_OPERATOR);
              break;
            default:
              jj_la1[5] = jj_gen;
              jj_consume_token(-1);
              throw new ParseException();
            }
            JsValuePossiblyWrapped();
            break;
          case JS_OPERATOR_SINGLE:
            jj_consume_token(JS_OPERATOR_SINGLE);
            break;
          default:
            jj_la1[6] = jj_gen;
            jj_consume_token(-1);
            throw new ParseException();
          }
          break;
        default:
          jj_la1[7] = jj_gen;
          ;
        }
        break;
      case JS_NEW_STATEMENT:
        JsNewStatement();
        JsTraverseObjects();
        break;
      default:
        jj_la1[8] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
  }

  static final public void JsTraverseObjects() throws ParseException {
                            /*@bgen(jjtree) JsTraverseObjects */
  ASTJsTraverseObjects jjtn000 = new ASTJsTraverseObjects(JJTJSTRAVERSEOBJECTS);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      label_2:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case JS_BRACKET_OPEN:
        case JS_ARRAY_OPEN:
        case JS_OBJECT_OPERATOR:
          ;
          break;
        default:
          jj_la1[9] = jj_gen;
          break label_2;
        }
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case JS_BRACKET_OPEN:
          jj_consume_token(JS_BRACKET_OPEN);
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case JS_FUNCTION_STATEMENT:
          case JS_NEW_STATEMENT:
          case JS_BRACKET_OPEN:
          case JS_BRACE_OPEN:
          case JS_STRING:
          case JS_STRING_SQ:
          case JS_DECIMAL:
          case JS_HEXADECIMAL:
          case JS_BUILTIN:
          case JS_PREFIX_OPERATOR:
          case JS_NUMBER_OPERATOR:
          case JS_VARIABLE:
          case PHP_BLOCK_BEGIN:
            JsArgumentList();
            break;
          default:
            jj_la1[10] = jj_gen;
            ;
          }
          jj_consume_token(JS_BRACKET_CLOSE);
          break;
        case JS_OBJECT_OPERATOR:
          jj_consume_token(JS_OBJECT_OPERATOR);
          jj_consume_token(JS_VARIABLE);
          break;
        case JS_ARRAY_OPEN:
          JsSelectArray();
          break;
        default:
          jj_la1[11] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
    } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
  }

  static final public void JsSelectArray() throws ParseException {
                        /*@bgen(jjtree) JsSelectArray */
  ASTJsSelectArray jjtn000 = new ASTJsSelectArray(JJTJSSELECTARRAY);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(JS_ARRAY_OPEN);
      JsValuePossiblyWrapped();
      jj_consume_token(JS_ARRAY_CLOSE);
    } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
  }

  static final public void JsReturnStatement() throws ParseException {
                            /*@bgen(jjtree) JsReturnStatement */
  ASTJsReturnStatement jjtn000 = new ASTJsReturnStatement(JJTJSRETURNSTATEMENT);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(JS_RETURN_STATEMENT);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case JS_FUNCTION_STATEMENT:
      case JS_NEW_STATEMENT:
      case JS_BRACKET_OPEN:
      case JS_BRACE_OPEN:
      case JS_STRING:
      case JS_STRING_SQ:
      case JS_DECIMAL:
      case JS_HEXADECIMAL:
      case JS_BUILTIN:
      case JS_PREFIX_OPERATOR:
      case JS_NUMBER_OPERATOR:
      case JS_VARIABLE:
      case PHP_BLOCK_BEGIN:
        JsValuePossiblyWrapped();
        break;
      default:
        jj_la1[12] = jj_gen;
        ;
      }
    } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
  }

  static final public void JsNewStatement() throws ParseException {
                         /*@bgen(jjtree) JsNewStatement */
  ASTJsNewStatement jjtn000 = new ASTJsNewStatement(JJTJSNEWSTATEMENT);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(JS_NEW_STATEMENT);
      jj_consume_token(JS_VARIABLE);
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
  }

  static final public void JsValue() throws ParseException {
                  /*@bgen(jjtree) JsValue */
  ASTJsValue jjtn000 = new ASTJsValue(JJTJSVALUE);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case JS_VARIABLE:
        jj_consume_token(JS_VARIABLE);
        break;
      case JS_NEW_STATEMENT:
        JsNewStatement();
        break;
      case JS_FUNCTION_STATEMENT:
        JsAnonymousFunction();
        break;
      case JS_STRING:
      case JS_STRING_SQ:
      case JS_DECIMAL:
      case JS_HEXADECIMAL:
      case JS_BUILTIN:
      case JS_NUMBER_OPERATOR:
        JsSimpleValue();
        break;
      case PHP_BLOCK_BEGIN:
        JsPhpInlineBlock();
        break;
      case JS_BRACE_OPEN:
        jj_consume_token(JS_BRACE_OPEN);
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case JS_FUNCTION_STATEMENT:
        case JS_NEW_STATEMENT:
        case JS_BRACKET_OPEN:
        case JS_BRACE_OPEN:
        case JS_STRING:
        case JS_STRING_SQ:
        case JS_DECIMAL:
        case JS_HEXADECIMAL:
        case JS_BUILTIN:
        case JS_PREFIX_OPERATOR:
        case JS_NUMBER_OPERATOR:
        case JS_VARIABLE:
        case PHP_BLOCK_BEGIN:
          JsInlineArray();
          break;
        default:
          jj_la1[13] = jj_gen;
          ;
        }
        jj_consume_token(JS_BRACE_CLOSE);
        break;
      default:
        jj_la1[14] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      JsTraverseObjects();
    } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
          if (jjtc000) {
